--- a/.drone.yml
+++ b/.drone.yml
@@ -12,15 +12,19 @@ type: docker
 name: my-node-build
 
 steps:
-- name: deploy
-  image: appleboy/drone-scp
-  settings:
-    host: 49.232.203.23
-    username: 
-      from_secret: ssh_username
-    password: 
-      from_secret: ssh_password
-    port: 8086
-    target: /var/www/blog
-    source:
-      - ./docs/.vuepress/dist/*
+# - name: deploy
+#   image: appleboy/drone-scp
+#   settings:
+#     host: 49.232.203.23
+#     username: 
+#       from_secret: ssh_username
+#     password: 
+#       from_secret: ssh_password
+#     port: 8086
+#     target: /var/www/blog
+#     source:
+#       - ./docs/.vuepress/dist/*
+- name: build
+  image: node:14
+  commands:
+    - node --version
