--- a/.drone.yml
+++ b/.drone.yml
@@ -32,6 +32,9 @@ steps:
 - name: deploy
   image: wtnb75/lftp
   environment:
-    - LFTP_SERVER=${ssh_host}
-    - LFTP_USER=${ssh_username}
-    - LFTP_PASSWORD=${ssh_password}
+    - LFTP_SERVER:
+        from_secret: ssh_host
+    - LFTP_USER:
+        from_secret: ssh_username
+    - LFTP_PASSWORD:
+        from_secret: ssh_password
